clusters/my-cluster/pytest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pytest
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pytest
  template:
    metadata:
      labels:
        app: pytest
    spec:
      containers:
      - name: pytest
        image: ghcr.io/gustavonlorenzo/pytest:1.2
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: ghcr-secret
