clusters/my-cluster/pytest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pytest
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pytest
  type: LoadBalancer
