clusters/my-cluster/pytest/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pytest
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pytest.guslabsathome.com`)
      kind: Rule
      services:
        - name: pytest
          port: 8080
      middlewares:
        - name: default-headers
  tls:
    secretName: nginx1
